--- a/AndBible/res/values-cs/strings.xml
+++ b/AndBible/res/values-cs/strings.xml
@@ -74,6 +74,8 @@
   <string name="prefs_night_mode_automatic">Automaticky</string>
   <string name="prefs_navigate_to_verse_title">Přejít na verš</string>
   <string name="prefs_navigate_to_verse_summary">Zadávat i verš při výběru pasáže</string>
+  <string name="prefs_open_links_in_special_window_title">Otevřít odkazy ve zvláštním okně</string>
+  <string name="prefs_open_links_in_special_window_summary">Pro rychlejší zobrazení křížových odkazů a Strongových čísel.</string>
   <string name="prefs_text_size_title">Velikost textu</string>
   <string name="prefs_text_size_summary">Vidět více nebo vidět zřetelněji</string>
   <string name="prefs_text_size_sample_text">Příklad textu</string>
@@ -84,6 +86,12 @@
   <string name="prefs_interface_locale_summary">Vybrat jiný jazyk uživatelského rozhraní</string>
   <string name="locale_change_warning">Aplikace bude restartována, aby došlo ke změně jazyka</string>
   <!--Window-->
+  <string name="window">Okno</string>
+  <string name="windowClose">Zavřít</string>
+  <string name="windowMaximise">Maximalizovat</string>
+  <string name="windowMinimise">Minimalizovat</string>
+  <string name="windowSynchronise">Synchronizovat</string>
+  <string name="windowMoveFirst">Přesunout první</string>
   <!--Notes screen-->
   <string name="no_chapter_notes">Kapitola neobsahuje poznámky</string>
   <string name="no_verse_notes">Verš neobsahuje poznámky</string>
@@ -220,6 +228,8 @@
   <string name="please_wait">Čekejte prosím...</string>
   <string name="all">Vše</string>
   <string name="default_value">@string/lang_default</string>
+  <string name="new_item">Nový</string>
+  <string name="close">Zavřít</string>
   <!--Errors-->
   <string name="error_occurred">Vznikla chyba</string>
   <string name="error_no_content">Žádný obsah pro vybraný verš</string>
