--- a/AndBible/res/values-lv/strings.xml
+++ b/AndBible/res/values-lv/strings.xml
@@ -13,7 +13,7 @@
   <string name="search">Atrast</string>
   <string name="settings">Iestatījumi</string>
   <string name="history">Vēsture</string>
-  <string name="speak">Balss</string>
+  <string name="speak">Runā</string>
   <string name="help">Palīdzība</string>
   <string name="verse">Pants</string>
   <!--Passage navigation-->
@@ -26,7 +26,7 @@
   <string name="search_index">Meklēt Saturā</string>
   <string name="index_creation_required">Meklēšanai ir nepieciešams indekss.\n\nIndeksus var lejuplādēt no interneta, vai izveidot lokāli.\n\nLejuplādēšana ir ātrāka un lejuplādētie Indeksi satur vairāk meklēšanas iespēju.\n\nLai lejuplādētu indeksus, nepieciešams interneta pieslēgums.\n</string>
   <string name="indexing_wait_msg">Kad indeksēšana būs pabeigta, Jūs tiksiet pārvietoti uz meklēšanas logu.</string>
-  <string name="index">Rādītājs</string>
+  <string name="index">Indekss</string>
   <string name="index_download">Lejupielādēt</string>
   <string name="index_not_available_for_download">Šis indekss nav pieejams lejupielādei</string>
   <string name="index_create">Izveidot</string>
@@ -35,10 +35,10 @@
   <string name="task_kill_warning">Ilglaicīgie uzdevumi var tik pārtraukti, ja pārslēgsieties uz citu programmu, pirms tie ir pabeigti.</string>
   <string name="no_tasks_running">Neviens uzdevums šobrīd netiek pildīts.</string>
   <!--Search-->
-  <string name="search_results">meklēt rezultātus</string>
+  <string name="search_results">Meklēt rezultātus</string>
   <string name="search_words_group_prompt">Atrast pantus</string>
   <string name="search_all_words">Visi vārdi</string>
-  <string name="search_any_word">Jebkuru vārdu</string>
+  <string name="search_any_word">Jebkurš vārds</string>
   <string name="search_phrase">Frāze</string>
   <string name="search_result_count">atrasti %d rezultāti</string>
   <string name="search_showing_first">Pārāk daudz rezultātu. Tiks rādīti pirmie %d</string>
@@ -57,13 +57,13 @@
   <string name="prefs_show_bookmarks_summary">rādīt ikonu pantiem ar grāmatzīmi</string>
   <string name="prefs_show_mynotes_title">Rādīt Manu Piezīmju Ikonu</string>
   <string name="prefs_show_mynotes_summary">Rādīt Ikonu Pantiem ar Manu Piezīmi</string>
-  <string name="prefs_show_notes_title">Piezīmes</string>
-  <string name="prefs_show_notes_summary">Rādīt piezīmes</string>
-  <string name="prefs_show_strongs_title">Rādīt Strong\'s numerāciju</string>
+  <string name="prefs_show_notes_title">Piezīmes un x-saistītie</string>
+  <string name="prefs_show_notes_summary">Rādīt piezīmes un saistītās rakstu vietas</string>
+  <string name="prefs_show_strongs_title">Rādīt Stronga numerāciju</string>
   <string name="prefs_show_strongs_summary">Saites uz Grieķu &amp; Ebreju definīcijām</string>
   <string name="prefs_show_morphology_title">Morfoloģiskie kodi</string>
-  <string name="prefs_show_morphology_summary">Rādīt Robinson\'s Grieķu morfoloģiju</string>
-  <string name="prefs_section_title_title">Sekcijas nosaukums</string>
+  <string name="prefs_show_morphology_summary">Rādīt Robinsona Grieķu morfoloģiju</string>
+  <string name="prefs_section_title_title">Sekciju nosaukumi</string>
   <string name="prefs_section_title_summary">Rādīt nekanonisko sekciju nosaukumus</string>
   <string name="prefs_red_letter_title">Lasīt Vēstuli</string>
   <string name="prefs_red_letter_summary">Rādīt Jēzus vārdus sarkanā krāsā</string>
@@ -73,9 +73,11 @@
   <string name="prefs_night_mode_summary">Lai vieglāk lasīt tumsā</string>
   <string name="prefs_night_mode_automatic">Automātiski</string>
   <string name="prefs_navigate_to_verse_title">Doties uz pantu</string>
-  <string name="prefs_navigate_to_verse_summary">Izvēlēties pantu (un nodaļu) kad atver rakstu vietu</string>
+  <string name="prefs_navigate_to_verse_summary">Izvēlēties pantu (un nodaļu) kad atzīmē rakstu vietu</string>
+  <string name="prefs_open_links_in_special_window_title">Atvērt saites speciālā logā</string>
+  <string name="prefs_open_links_in_special_window_summary">Ātrākai saistīto referenču un Stronga skaidrojumu atvēršanai</string>
   <string name="prefs_text_size_title">Teksta izmērs</string>
-  <string name="prefs_text_size_summary">Skatīt vairāk vai redzēt skaidrāk</string>
+  <string name="prefs_text_size_summary">Redzēt vairāk vai redzēt skaidrāk</string>
   <string name="prefs_text_size_sample_text">Parauga teksts</string>
   <string name="prefs_screen_timeout_title">Iemidzināt</string>
   <string name="prefs_screen_timeout_summary">gaidīšanas laiks pirms ekrāna atslēgšanas</string>
@@ -84,18 +86,24 @@
   <string name="prefs_interface_locale_summary">Izvēlieties pielāgotu lietotāja interfeisa valodu</string>
   <string name="locale_change_warning">Programma tiks pārstartēta, lai pārslēgtos uz jauno interfeisa valodu</string>
   <!--Window-->
+  <string name="window">Logs</string>
+  <string name="windowClose">Aizvērt</string>
+  <string name="windowMaximise">Palielināt</string>
+  <string name="windowMinimise">Samazināt</string>
+  <string name="windowSynchronise">Sinhronizēt</string>
+  <string name="windowMoveFirst">Pārvietot vispirms </string>
   <!--Notes screen-->
-  <string name="no_chapter_notes">Šajā nodaļā nav piezīmju</string>
-  <string name="no_verse_notes">Šajā pantā nav piezīmju</string>
+  <string name="no_chapter_notes">Šai nodaļai nav piezīmju</string>
+  <string name="no_verse_notes">Šim pantam nav piezīmju</string>
   <string name="previous">Iepriekšējais</string>
   <string name="next">Nākamais</string>
   <!--Strongs-->
-  <string name="strongs">Strong\'s Vārdnīca</string>
-  <string name="strongs_not_installed">Lūdzu, lejuplādējiet Strong\'s Ebreju un Grieķu vārdnīcas</string>
-  <string name="all_greek_occurrences">Atrast visus</string>
-  <string name="all_hebrew_occurrences">Atrast visus</string>
-  <string name="no_indexed_bible_with_strongs_ref">Jums nepieciešams lejuplādēt Bībeli, kas satur Strong\'s numerāciju un lejuplādēt tās indeksu izmantojot Meklēšanu</string>
-  <string name="morph_robinson_not_installed">Lūdzu lejuplādējiet \'Robinson\'s Morphological Analysis Codes\' vārdnīcu</string>
+  <string name="strongs">Stronga Vārdnīca</string>
+  <string name="strongs_not_installed">Lūdzu, lejuplādējiet Stronga Ebreju un Grieķu vārdnīcas</string>
+  <string name="all_greek_occurrences">Atrast visus sastopamos</string>
+  <string name="all_hebrew_occurrences">Atrast visus sastopamos</string>
+  <string name="no_indexed_bible_with_strongs_ref">Jums nepieciešams lejuplādēt Bībeli, kas satur Stronga numerāciju un lejuplādēt tās indeksu izmantojot Meklēšanu</string>
+  <string name="morph_robinson_not_installed">Lūdzu lejuplādējiet \'Robinsona Morfoloģiskās analīzes kodu vārdnīcu</string>
   <string name="strongs_toggle_button_on">nnnn</string>
   <string name="strongs_toggle_button_off">nnnn</string>
   <!--Module download-->
@@ -103,12 +111,12 @@
   <string name="download_confirmation">Lejuplādēt Bībeli no interneta?</string>
   <string name="download_source_message">Dokumenti ir lejuplādēti no\nhttp://www.crosswire.org\n&amp; http://ibt.org.ru\n&amp; http://xiphos.org</string>
   <string name="download_document_confirm_prefix">Lejuplādēt</string>
-  <string name="download_refreshing_book_list">Atsvaidzināt sarakstu ar pieejamajiem dokumentiem?</string>
+  <string name="download_refreshing_book_list">Pieejamajiem dokumentu atsvaidzināšanas saraksts?</string>
   <string name="download_refresh_book_list_menu_item">Atjaunot</string>
   <string name="error_downloading">Kļūda lejupielādējot. Lūdzu, pārbaudiet savu interneta pieslēgumu.</string>
   <string name="no_internet_connection">Nevarēja izveidot savienojumu ar internetu</string>
-  <string name="storage_space_warning">Nepietiekama diska vieta.</string>
-  <string name="wait_for_bible">Lūdzu uzgaidiet, kamēr Bībeles lejuplāde būs pabeigta. Pēc tam Jūs tiksiet pārvietoti uz sākumu.</string>
+  <string name="storage_space_warning">Atmiņā nepietiekama vieta .</string>
+  <string name="wait_for_bible">Lūdzu uzgaidiet, kamēr Bībeles lejuplāde būs pabeigta. Pēc tam Jūs tiksiet pārvietoti uz galveno logu.\n\nDownload more documents later by navigating to Menu button/More/Download documents.</string>
   <string name="wait_for_bible_not_yet">Lūdzu uzgaidiet. Bībeles uzstādīšana vēl nav pabeigta.</string>
   <string name="download_complete_no_bibles">Neviena Bībele nav instalēta. Lūdzu nospiediet atpakaļ\nUn mēģiniet vēlreiz.</string>
   <string name="too_many_jobs">Pārāk daudz aktīvu uzdevumu. Lūdzu uzgaidiet kamēr daži tiek izpildīti un mēģiniet vēlreiz.</string>
@@ -116,7 +124,7 @@
   <!--Daily Reading Plan-->
   <string name="rdg_plan_title">Lāsīšanas plāns</string>
   <string name="rdg_plan_selector_title">Izvēlies lasīšanas plānu</string>
-  <string name="rdg_plan_day">%s. Diena</string>
+  <string name="rdg_plan_day">%s\'. Diena</string>
   <string name="rdg_plan_set_start_jan1">Sākt ar 1. janvāri</string>
   <string name="done">Pabeigts</string>
   <string name="reset">Salikt no jauna</string>
@@ -125,6 +133,7 @@
   <string name="rdg_plan_y1ot1nt1_OTandNT">Bībele gada laikā - VD un JD</string>
   <string name="rdg_plan_y1ot1nt1_OTthenNT">Bībele gada laikā vispirms VD tad JD</string>
   <string name="rdg_plan_y1ot1nt2_mcheyne">Bībele gada laikā (M Čeinijs)</string>
+  <string name="rdg_plan_y2ot1ntps2">2 gadu plāns - VD vienreiz, JD un Psalmi divreiz</string>
   <!--string name="rdg_plan_m1gospels">Through the Gospels in a month</string-->
   <!--Document context menu-->
   <string name="delete">Dzēst</string>
@@ -219,8 +228,10 @@
   <string name="please_wait">Lūdzu uzgaidiet ...</string>
   <string name="all">Viss</string>
   <string name="default_value">@string/lang_default</string>
+  <string name="new_item">Jauns</string>
+  <string name="close">Aizvērt</string>
   <!--Errors-->
-  <string name="error_occurred">Kļūda</string>
+  <string name="error_occurred">Radusies kļūda</string>
   <string name="error_no_content">Izvēlētajam pantam nav papildus satura</string>
   <string name="error_page_too_large">Lapa ir par lielu lai to ielādētu</string>
   <string name="error_key_not_in_document">Dokumentā nav atrasts</string>
