--- a/AndBible/res/values-sv/strings.xml
+++ b/AndBible/res/values-sv/strings.xml
@@ -14,13 +14,13 @@
   <string name="notes">Anteckningar</string>
   <string name="settings">Inställningar</string>
   <string name="history">Historia</string>
-  <string name="choosePassageBookName">Välj Boka</string>
+  <string name="choosePassageBookName">Välj Bok</string>
   <string name="choosePassageChapterName">Välj kapitel</string>
   <string name="search_index">Skapa Sökning Register</string>
-  <string name="index_creation_required">För att söka i ett index måste skapas. Skapa ett index kan ta lång tid.</string>
+  <string name="index_creation_required">För att söka måste ett index skapas. Skapa ett index kan ta lång tid.</string>
   <string name="index">Index</string>
   <string name="sdcard_error">Tyvärr, du har inget SD-kort!</string>
-  <string name="directory_error">Tyvärr, inte komma åt katalog %s</string>
+  <string name="directory_error">Tyvärr, kommer inte åt katalogen %s</string>
   <string name="progress_status">Framsteg</string>
   <string name="search_words_group_prompt">Hitta verser</string>
   <string name="search_all_words">Alla ord</string>
@@ -31,13 +31,13 @@
   <string name="search_new_testament">Nya Testamentet</string>
   <string name="search_old_testament">Gamla Testamentet</string>
   <string name="search_current_book">Aktuell bok</string>
-  <string name="error_executing_search">Ogiltig sökfråga</string>
+  <string name="error_executing_search">Ogiltig sökterm</string>
   <string name="prefs_show_verseno_title">Versnummer</string>
   <string name="prefs_show_verseno_summary">Visa versnummer</string>
   <string name="prefs_show_notes_title">Anteckningar</string>
   <string name="prefs_show_notes_summary">Visa anteckningar</string>
   <string name="prefs_night_mode_title">Nattläge</string>
-  <string name="prefs_night_mode_summary">För att underlätta avläsning i mörker</string>
+  <string name="prefs_night_mode_summary">För att underlätta läsning i mörker</string>
   <string name="no_chapter_notes">Inga anteckningar finns i detta kapitel</string>
   <string name="no_verse_notes">Inga anteckningar finns i denna vers</string>
   <string name="previous">Föregående</string>
